[project]
name = "comfyui-omario-nodes"
version = "1.1.0"
description = "Bộ sưu tập custom nodes chất lượng cao cho ComfyUI - Save/Load Conditioning, Inpaint Cache, Mask Tracking, Light Leaks Transition và nhiều tiện ích khác"
authors = [
    { name = "Omario92", email = "your-email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/Omario92/ComfyUI-OmarioNodes"
Repository = "https://github.com/Omario92/ComfyUI-OmarioNodes"
Issues = "https://github.com/Omario92/ComfyUI-OmarioNodes/issues"

[tool.comfy]
PublisherId = "Omario92"
DisplayName = "Omario Nodes"
Icon = ""
